--- a/app/src/main/res/layout/fragment_live.xml
+++ b/app/src/main/res/layout/fragment_live.xml
@@ -1,5 +1,6 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/live_fragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.test.kiran.fragmentsswitch.live.LiveFragment">
@@ -8,6 +9,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:text="@string/hello_live_fragment"
+        android:textSize="@dimen/text_font" />
 
 </FrameLayout>
