--- a/app/src/main/res/layout/fragment_other_base.xml
+++ b/app/src/main/res/layout/fragment_other_base.xml
@@ -1,16 +1,19 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/detail_fragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.test.kiran.fragmentsswitch.detail.DetailFragment">
+    tools:context="com.test.kiran.fragmentsswitch.otherfragment.OtherBaseFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_detail_fragment"
-        android:textSize="@dimen/text_font" />
+        android:text="@string/hello_blank_fragment" />
 
+    <Button
+        android:id="@+id/other_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:onClick="onButtonPressed" />
 
 </FrameLayout>
