--- a/app/src/main/res/layout/fragment_player.xml
+++ b/app/src/main/res/layout/fragment_player.xml
@@ -1,16 +1,15 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/detail_fragment"
+    android:id="@+id/player_fragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.test.kiran.fragmentsswitch.detail.DetailFragment">
+    tools:context="com.test.kiran.fragmentsswitch.player.PlayerFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_detail_fragment"
+        android:text="@string/hello_player_fragment"
         android:textSize="@dimen/text_font" />
-
 
 </FrameLayout>
